--- a/WYNews/app/src/main/res/layout/activity_main.xml
+++ b/WYNews/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context=".ui.activity.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+
+    <FrameLayout
+        android:id="@+id/fl_main"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#c2c2c2"/>
+    <RadioGroup
+        android:padding="3dp"
+        android:id="@+id/rg_main"
+        android:background="#ffffff"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/rb_main_news"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:button="@android:color/transparent"
+            android:drawableTop="@drawable/radio_button_for_homepage_news"
+            android:gravity="center"
+            android:text="新闻"
+            android:textColor="@color/radio_button_for_homepage_news_text" />
+
+        <RadioButton
+            android:id="@+id/rb_main_live"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="@color/radio_button_for_homepage_news_text"
+            android:button="@android:color/transparent"
+            android:drawableTop="@drawable/radio_button_for_homepage_live"
+            android:gravity="center"
+            android:text="直播" />
+        <RadioButton
+            android:id="@+id/rb_main_topic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/radio_button_for_homepage_news_text"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:button="@android:color/transparent"
+            android:text="话题"
+            android:drawableTop="@drawable/radio_button_for_homepage_topic"/>
+        <RadioButton
+            android:id="@+id/rb_main_me"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/radio_button_for_homepage_news_text"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:button="@android:color/transparent"
+            android:text="我"
+            android:drawableTop="@drawable/radio_button_for_homepage_me"/>
+    </RadioGroup>
+
+
+</LinearLayout>
