--- a/WYNews/app/src/main/res/layout/fragment_topic.xml
+++ b/WYNews/app/src/main/res/layout/fragment_topic.xml
@@ -11,6 +11,7 @@
         android:orientation="horizontal">
 
         <android.support.design.widget.TabLayout
+            android:id="@+id/tl_topic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
@@ -33,8 +34,8 @@
             android:src="@mipmap/lq" />
 
     </RelativeLayout>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="话题"/>
+    <android.support.v4.view.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/vp_topic"/>
 </LinearLayout>
