--- a/WYNews/app/src/main/res/layout/fragment_classification.xml
+++ b/WYNews/app/src/main/res/layout/fragment_classification.xml
@@ -7,6 +7,7 @@
     android:id="@+id/lv_classification"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:divider="@android:color/transparent"
     />
 
 </LinearLayout>
