--- a/WYNews/app/src/main/res/layout/fragment_classification.xml
+++ b/WYNews/app/src/main/res/layout/fragment_classification.xml
@@ -3,11 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-<ListView
-    android:id="@+id/lv_classification"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:divider="@android:color/transparent"
-    />
+
+    <ListView
+        android:id="@+id/lv_classification"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="@android:color/transparent" />
 
 </LinearLayout>
