--- a/WYNews/app/src/main/res/layout/item_classification.xml
+++ b/WYNews/app/src/main/res/layout/item_classification.xml
@@ -1,27 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:padding="2dp"
+    android:layout_height="wrap_content"
     android:gravity="center"
-    android:layout_height="wrap_content">
+    android:padding="2dp">
 
     <ImageView
         android:id="@+id/iv_item_classification_image"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-         />
+        android:layout_height="wrap_content" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/tv_item_classification_room_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="内容标题"
             android:textColor="@android:color/white" />
+
         <TextView
             android:id="@+id/tv_item_classification_user_count"
             android:layout_width="wrap_content"
