上拉加载 下拉刷新 实现了部分功能  轮播图功能依靠组件已经实现

--- a/WYNews/app/src/main/res/layout/loopview_item.xml
+++ b/WYNews/app/src/main/res/layout/loopview_item.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <com.example.dllo.wynews.model.refresh.RefreshListView
-        android:id="@+id/rl_hot_live"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <ImageView
+        android:id="@+id/loop_image"
+        android:scaleType="centerCrop"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
