--- a/WYNews/app/src/main/res/layout/loop_view_hot_live.xml
+++ b/WYNews/app/src/main/res/layout/loop_view_hot_live.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.example.dllo.wynews.model.refresh.RefreshListView
-        android:id="@+id/lv_classification"
+    <com.example.dllo.wynews.view.loopview.LoopView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@android:color/transparent" />
-
+        android:layout_height="200dp"
+        android:id="@+id/loopview_hot_live"
+        app:bottom_style="@integer/loop_no_descript_right"
+        app:rate="3"
+        />
 </LinearLayout>
