--- a/WYNews/app/src/main/res/values/colors.xml
+++ b/WYNews/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="descript_color">#92969595</color>
 </resources>
