优化了轮播图  图片文字显示  直播热门 分类 刷新加载完成,分类中刷新加载冲突解决

--- a/WYNews/app/src/main/res/layout/fragment_hot_live.xml
+++ b/WYNews/app/src/main/res/layout/fragment_hot_live.xml
@@ -7,5 +7,6 @@
     <com.example.dllo.wynews.model.refresh.RefreshListView
         android:id="@+id/rl_hot_live"
         android:layout_width="match_parent"
+        android:divider="@android:color/transparent"
         android:layout_height="match_parent" />
 </LinearLayout>
