--- a/WYNews/app/src/main/res/drawable/loop_circler_bg.xml
+++ b/WYNews/app/src/main/res/drawable/loop_circler_bg.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@mipmap/circler" android:state_selected="false" />
-    <item android:drawable="@mipmap/circler_hover" android:state_selected="true" />
+    <item android:drawable="@mipmap/btn_check_disabled_nightmode" android:state_selected="false" />
+    <item android:drawable="@mipmap/btn_check_normal" android:state_selected="true" />
 
 </selector>
