--- a/WYNews/app/src/main/res/layout/item_classification.xml
+++ b/WYNews/app/src/main/res/layout/item_classification.xml
@@ -11,23 +11,25 @@
         android:layout_height="wrap_content" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/tv_item_classification_room_name"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="内容标题"
+            android:background="@color/descript_color"
             android:textColor="@android:color/white" />
 
         <TextView
             android:id="@+id/tv_item_classification_user_count"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="参与人数"
+            android:background="@color/descript_color"
             android:textColor="@android:color/white" />
 
 
