--- a/WYNews/app/src/main/res/layout/item_hot_live.xml
+++ b/WYNews/app/src/main/res/layout/item_hot_live.xml
@@ -1,9 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<TextView
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/tv_hot_view"/>
-</LinearLayout>
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="2dp">
+
+    <ImageView
+        android:id="@+id/iv_item_hot_live_live"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_item_hot_live_room_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="内容标题"
+            android:background="@color/descript_color"
+            android:textColor="@android:color/white" />
+
+        <TextView
+            android:id="@+id/tv_item_hot_live_user_count"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="参与人数"
+            android:background="@color/descript_color"
+            android:textColor="@android:color/white" />
+
+
+    </LinearLayout>
+
+</RelativeLayout>
