--- a/WYNews/app/src/main/res/layout/fragment_news.xml
+++ b/WYNews/app/src/main/res/layout/fragment_news.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -35,13 +36,32 @@
             android:src="@mipmap/akb" />
 
     </RelativeLayout>
-
-    <android.support.design.widget.TabLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#ffffff" />
+        android:background="#ffffff"
+        android:weightSum="10"
+        android:orientation="horizontal">
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tl_news"
+            android:layout_weight="8"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:tabMaxWidth="100dp"
+            android:background="#ffffff" />
+        <ImageView
+
+            android:layout_weight="2"
+            android:layout_gravity="center"
+            android:id="@+id/iv_popupwindow_sel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/img_news_tablayout"/>
+    </LinearLayout>
+
 
     <android.support.v4.view.ViewPager
+        android:id="@+id/vp_news"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />
