--- a/WYNews/app/src/main/res/layout/fragment_select.xml
+++ b/WYNews/app/src/main/res/layout/fragment_select.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.example.dllo.wynews.view.loopview.LoopView
-        android:id="@+id/loopview_hot_live"
+    <com.example.dllo.wynews.model.refresh.RefreshListView
+        android:id="@+id/rl_select"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        app:bottom_style="@integer/loop_have_descript"
-        app:rate="3" />
+        android:layout_height="match_parent"/>
 </LinearLayout>
