--- a/WYNews/app/src/main/res/layout/fragment_topic_question.xml
+++ b/WYNews/app/src/main/res/layout/fragment_topic_question.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="问吧"/>
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="5dp">
+
+   <com.example.dllo.wynews.model.refresh.RefreshListView
+       android:id="@+id/rl_question"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"/>
 </LinearLayout>
