--- a/WYNews/app/src/main/res/layout/item_classification.xml
+++ b/WYNews/app/src/main/res/layout/item_classification.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:padding="2dp">
+    android:padding="3dp">
 
     <ImageView
         android:id="@+id/iv_item_classification_image"
@@ -11,12 +11,14 @@
         android:layout_height="wrap_content" />
 
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:orientation="vertical">
 
         <TextView
+            android:paddingLeft="5dp"
             android:id="@+id/tv_item_classification_room_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -25,6 +27,7 @@
             android:textColor="@android:color/white" />
 
         <TextView
+            android:paddingLeft="5dp"
             android:id="@+id/tv_item_classification_user_count"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
