--- a/WYNews/app/src/main/res/layout/item_hot_live.xml
+++ b/WYNews/app/src/main/res/layout/item_hot_live.xml
@@ -18,6 +18,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:paddingLeft="5dp"
             android:id="@+id/tv_item_hot_live_room_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -26,6 +27,7 @@
             android:textColor="@android:color/white" />
 
         <TextView
+            android:paddingLeft="5dp"
             android:id="@+id/tv_item_hot_live_user_count"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
