--- a/WYNews/app/src/main/res/layout/item_topic_head_view.xml
+++ b/WYNews/app/src/main/res/layout/item_topic_head_view.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="5dp">
 
     <HorizontalScrollView
         android:layout_width="match_parent"
@@ -33,7 +34,9 @@
                     <TextView
                         android:id="@+id/tv_item_topic_head_one"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:singleLine="false" />
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
@@ -56,7 +59,9 @@
                     <TextView
                         android:id="@+id/tv_item_topic_head_two"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:singleLine="false" />
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
@@ -79,7 +84,9 @@
                     <TextView
                         android:id="@+id/tv_item_topic_head_three"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:singleLine="false" />
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
@@ -102,7 +109,9 @@
                     <TextView
                         android:id="@+id/tv_item_topic_head_four"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:singleLine="false" />
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
@@ -125,7 +134,9 @@
                     <TextView
                         android:id="@+id/tv_item_topic_head_five"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:singleLine="false" />
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
