--- a/WYNews/app/src/main/res/layout/item_topic_first.xml
+++ b/WYNews/app/src/main/res/layout/item_topic_first.xml
@@ -5,14 +5,18 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
-        android:layout_margin="5dp"
-        android:background="#fffff"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_margin="5dp"
+        android:background="#ffffff">
+
         <RelativeLayout
+            android:padding="5dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <LinearLayout
+                android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -23,14 +27,15 @@
                     android:layout_height="wrap_content" />
 
                 <LinearLayout
+                    android:layout_marginTop="20dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
-                    <ImageView
+                    <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/iv_item_topic_first_first"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_width="20dp"
+                        android:layout_height="20dp" />
 
                     <ImageView
                         android:layout_width="wrap_content"
@@ -38,12 +43,13 @@
                         android:src="@mipmap/abl" />
 
                     <TextView
-                        android:singleLine="true"
-                        android:maxEms="8"
-                        android:ellipsize="end"
+                        android:textColor="@android:color/black"
                         android:id="@+id/tv_item_topic_first_first"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:maxEms="8"
+                        android:singleLine="true" />
 
                     <ImageView
                         android:layout_width="wrap_content"
@@ -52,14 +58,15 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:layout_marginTop="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
-                    <ImageView
+                    <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/iv_item_topic_first_second"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_width="20dp"
+                        android:layout_height="20dp" />
 
                     <ImageView
                         android:layout_width="wrap_content"
@@ -67,55 +74,69 @@
                         android:src="@mipmap/abl" />
 
                     <TextView
-                        android:singleLine="true"
-                        android:maxEms="20"
-                        android:ellipsize="end"
+                        android:textColor="@android:color/black"
                         android:id="@+id/tv_item_topic_first_second"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:maxEms="20"
+                        android:singleLine="true" />
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@mipmap/abm" />
                 </LinearLayout>
+
                 <LinearLayout
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="15dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
+
                     <TextView
+                        android:textSize="10sp"
                         android:id="@+id/tv_item_topic_first_classification"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@android:color/holo_blue_light"/>
+                        android:textColor="@android:color/holo_blue_light" />
+
                     <View
                         android:layout_width="1dp"
                         android:layout_height="match_parent"
                         android:layout_marginLeft="4dp"
                         android:layout_marginRight="4dp"
                         android:background="#868686" />
+
                     <TextView
+                        android:textSize="10sp"
+                        android:id="@+id/tv_item_first_concerncount"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/tv_item_first_concerncount"/>
+                        android:layout_height="wrap_content" />
+
                     <View
                         android:layout_width="1dp"
                         android:layout_height="match_parent"
                         android:layout_marginLeft="4dp"
                         android:layout_marginRight="4dp"
                         android:background="#868686" />
+
                     <TextView
+                        android:textSize="10sp"
+                        android:id="@+id/tv_item_first_talkcount"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/tv_item_first_talkcount"/>
+                        android:layout_height="wrap_content" />
                 </LinearLayout>
             </LinearLayout>
+
             <ImageView
-                android:layout_alignParentRight="true"
-                android:layout_alignParentBottom="true"
+                android:paddingBottom="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/crm_add_focus"/>
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:src="@mipmap/crm_add_focus" />
         </RelativeLayout>
 
 
