--- a/WYNews/app/src/main/res/layout/fragment_sports.xml
+++ b/WYNews/app/src/main/res/layout/fragment_sports.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<TextView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:text="体育"/>
+    android:orientation="vertical">
+
+    <com.example.dllo.wynews.model.refresh.RefreshListView
+        android:id="@+id/rl_sports"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
