--- a/WYNews/app/src/main/res/layout/item_sports_second.xml
+++ b/WYNews/app/src/main/res/layout/item_sports_second.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:padding="5dp"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/tv_item_headline_thread_title"
+        android:id="@+id/tv_item_sports_second_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/black" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,21 +19,21 @@
 
         <ImageView
             android:layout_margin="1dp"
-            android:id="@+id/iv_item_headline_thread_one"
+            android:id="@+id/iv_item_sports_second_one"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
 
         <ImageView
             android:layout_margin="1dp"
-            android:id="@+id/iv_item_headline_thread_two"
+            android:id="@+id/iv_item_sports_second_two"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
 
         <ImageView
             android:layout_margin="1dp"
-            android:id="@+id/iv_item_headline_thread_three"
+            android:id="@+id/iv_item_sports_second_three"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
@@ -43,14 +44,15 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/tv_item_headline_thread_from"
+            android:id="@+id/tv_item_sports_second_from"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/tv_item_headline_thread_number"
+            android:id="@+id/tv_item_sports_second_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true" />
     </RelativeLayout>
+
 </LinearLayout>
