--- a/WYNews/app/src/main/res/layout/item_topic_first.xml
+++ b/WYNews/app/src/main/res/layout/item_topic_first.xml
@@ -22,6 +22,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:textColor="@android:color/black"
                     android:id="@+id/tv_item_topic_first_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
