--- a/WYNews/app/src/main/res/layout/fragment_me.xml
+++ b/WYNews/app/src/main/res/layout/fragment_me.xml
@@ -43,9 +43,21 @@
 
 
         <RelativeLayout
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/iv_me_user_pic_url"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/tv_me_user_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#ffffff" />
 
             <Button
                 android:id="@+id/btn_me_login"
@@ -57,6 +69,7 @@
                 android:textColor="#ff3333" />
 
             <TextView
+                android:id="@+id/tv_me_phone_register"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
@@ -66,6 +79,7 @@
         </RelativeLayout>
 
         <LinearLayout
+            android:id="@+id/ll_me_all_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -122,6 +136,7 @@
                 android:background="#ffffff" />
 
             <LinearLayout
+                android:id="@+id/ll_me_qq_login"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
