--- a/WYNews/app/src/main/res/layout/item_classification_head_view.xml
+++ b/WYNews/app/src/main/res/layout/item_classification_head_view.xml
@@ -198,6 +198,17 @@
             android:gravity="center"
             android:text="生活"
             android:textColor="@color/classification_title_color" />
+        <RadioButton
+            android:visibility="invisible"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:background="@drawable/radio_button_for_live_classification_title"
+            android:button="@android:color/transparent"
+            android:gravity="center"
+            android:text="生活"
+            android:textColor="@color/classification_title_color" />
     </RadioGroup>
 
 
