--- a/WYNews/app/src/main/res/layout/item_topic_first.xml
+++ b/WYNews/app/src/main/res/layout/item_topic_first.xml
@@ -26,8 +26,14 @@
                     android:id="@+id/tv_item_topic_first_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
+                <TextView
+                    android:textColor="@android:color/black"
+                    android:id="@+id/tv_item_topic_first_content"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
                 <LinearLayout
+                    android:id="@+id/ll_item_topic_first_first"
                     android:layout_marginTop="20dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -59,6 +65,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/ll_item_topic_first_second"
                     android:layout_marginTop="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
